[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/giant001.png" type="Texture" id=1]
[ext_resource path="res://source/actors/ais/GiantWithSprite.gd" type="Script" id=2]
[ext_resource path="res://source/actors/ais/SolidHitbox.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 45.1397
height = 117.768

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.5869
height = 45.2692

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Chest/ArmRight/ForeArmRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 196.431, 1.12244 ), Vector2( 196.431, 1.12244 ), Vector2( 196.431, 1.12244 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chest/ArmRight/ForeArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Chest/ArmLeft/ForeArmLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ), Vector2( -206.533, -3.36737 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Chest/ArmLeft/ForeArmLeft:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 32.9994, 102.465, 141.719, 165.497, 304.977, 369.375 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chest/ArmLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ), Vector2( -72.3132, -33.3875 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chest/ArmLeft:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 16.0504, 76.3311, 76.3311, 34.1853, 14.742, -2.35641 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Chest/ArmRight:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79.7072, -25.3694 ), Vector2( 79.7072, -25.3694 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Chest/ArmRight:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Chest/Head:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3.29657, -101.25 ), Vector2( -3.29657, -101.25 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Chest/Head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Chest:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -105.511 ), Vector2( 0, -105.511 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Chest:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "strike_left_hand"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Chest/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.29657, -101.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Chest/Head:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Chest:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -105.511 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Chest:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chest/ArmLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -72.3132, -33.3875 ), Vector2( -90.3335, -34.7223 ), Vector2( -133.334, -33.7223 ), Vector2( -95.3335, -31.7223 ), Vector2( -54.3335, -29.7223 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chest/ArmLeft:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Chest/ArmRight/ForeArmRight:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 196.431, 1.12244 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Chest/ArmRight/ForeArmRight:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Chest/ArmLeft/ForeArmLeft:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -206.533, -3.36737 ), Vector2( -231.895, -3.36737 ), Vector2( -231.895, -3.36737 ), Vector2( -231.895, -3.36737 ), Vector2( -207.895, -3.36737 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Chest/ArmLeft/ForeArmLeft:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Chest/ArmRight:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 79.7072, -25.3694 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Chest/ArmRight:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Giant" type="Node2D"]
script = ExtResource( 2 )

[node name="Chest" type="Sprite" parent="."]
position = Vector2( 0, -105.511 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 361, 201, 152, 208 )

[node name="ArmRight" type="Sprite" parent="Chest"]
position = Vector2( 79.7072, -25.3694 )
texture = ExtResource( 1 )
offset = Vector2( 99.6006, -1.07727 )
region_enabled = true
region_rect = Rect2( 75, 379, 222, 36 )

[node name="ForeArmRight" type="Sprite" parent="Chest/ArmRight"]
position = Vector2( 196.431, 1.12244 )
texture = ExtResource( 1 )
offset = Vector2( 94.6884, 0.936066 )
region_enabled = true
region_rect = Rect2( 81, 190, 222, 36 )

[node name="Hurtbox" type="Area2D" parent="Chest/ArmRight/ForeArmRight"]
visible = false
position = Vector2( 110.674, 5.04618 )
rotation = -0.122494
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/ArmRight/ForeArmRight/Hurtbox"]
rotation = -1.45881
shape = SubResource( 1 )

[node name="ArmLeft" type="Sprite" parent="Chest"]
position = Vector2( -54.3335, -29.7223 )
texture = ExtResource( 1 )
offset = Vector2( -103.201, -1.0773 )
region_enabled = true
region_rect = Rect2( 76, 294, 222, 36 )

[node name="ForeArmLeft" type="Sprite" parent="Chest/ArmLeft"]
position = Vector2( -207.895, -3.36737 )
texture = ExtResource( 1 )
offset = Vector2( -104.827, 0.900726 )
region_enabled = true
region_rect = Rect2( 79, 117, 222, 36 )

[node name="Hurtbox" type="Area2D" parent="Chest/ArmLeft/ForeArmLeft"]
visible = false
position = Vector2( -109.33, 1.99776 )
rotation = -0.122494
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/ArmLeft/ForeArmLeft/Hurtbox"]
rotation = -1.45881
shape = SubResource( 1 )

[node name="Head" type="Sprite" parent="Chest"]
position = Vector2( -3.29657, -101.25 )
texture = ExtResource( 1 )
offset = Vector2( 6.797, -52.0124 )
region_enabled = true
region_rect = Rect2( 456, 86, 159, 108 )

[node name="SolidHitbox" type="KinematicBody2D" parent="Chest/Head"]
visible = false
collision_layer = 36
collision_mask = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/Head/SolidHitbox"]
position = Vector2( 7.93701, -53.178 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/punch_left = SubResource( 3 )
anims/strike_left_hand = SubResource( 4 )
